--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -2,18 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Book Flight</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Complete Your Booking | Infosys Booking System</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>Complete Your Booking</h2>
-  <form id="bookingForm">
-    <input type="text" id="name" placeholder="Passenger Name" required>
-    <input type="email" id="email" placeholder="Email" required>
-    <button type="submit">Confirm Booking</button>
-  </form>
+  <!-- Added navigation header -->
+  <nav>
+    <div class="container">
+      <a href="index.html" class="logo">✈️ FlightHub</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Search</a></li>
+        <li><a href="booking.html" class="active">Booking</a></li>
+        <li><a href="receipt.html">Receipt</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <div id="status"></div>
+  <!-- Improved header -->
+  <header>
+    <div class="container">
+      <h1>Complete Your Booking</h1>
+      <p>Enter your details to confirm your flight reservation</p>
+    </div>
+  </header>
+
+  <main class="container">
+    <section style="max-width: 600px; margin: 0 auto;">
+      <div style="text-align: center; margin-bottom: 30px;">
+        <h2>📋 Complete Your Booking</h2>
+        <p style="color: var(--text-secondary); margin-top: 10px;">Step 2 of 3: Enter your passenger details</p>
+      </div>
+
+      <form id="bookingForm">
+        <div style="display: flex; flex-direction: column; gap: 20px;">
+          <div>
+            <label for="name" style="display: block; margin-bottom: 8px; font-weight: 600; color: var(--text-primary);">Full Name *</label>
+            <input type="text" id="name" placeholder="Enter your full name" required style="width: 100%;">
+            <small style="color: var(--text-secondary); display: block; margin-top: 4px;">As it appears on your ID</small>
+          </div>
+
+          <div>
+            <label for="email" style="display: block; margin-bottom: 8px; font-weight: 600; color: var(--text-primary);">Email Address *</label>
+            <input type="email" id="email" placeholder="Enter your email address" required style="width: 100%;">
+            <small style="color: var(--text-secondary); display: block; margin-top: 4px;">We'll send your booking confirmation here</small>
+          </div>
+
+          <div id="formError" style="display: none;"></div>
+
+          <button type="submit" class="success" style="width: 100%; margin-top: 10px; padding: 14px;">Confirm Booking</button>
+          <a href="index.html" style="text-decoration: none;"><button type="button" class="secondary" style="width: 100%;">← Back to Search</button></a>
+        </div>
+      </form>
+
+      <div id="status"></div>
+    </section>
+  </main>
 
   <script src="js/api.js"></script>
   <script src="js/booking.js"></script>
