--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,41 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flight Search | Booking System</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flight Search | Infosys Booking System</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Added navigation header -->
+  <nav>
+    <div class="container">
+      <a href="index.html" class="logo">✈️ FlightHub</a>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Search</a></li>
+        <li><a href="booking.html">Booking</a></li>
+        <li><a href="receipt.html">Receipt</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Improved header with gradient background -->
   <header>
-    <h1>Flight Booking Simulator</h1>
+    <div class="container">
+      <h1>Find Your Perfect Flight</h1>
+      <p>Search and book flights with ease</p>
+    </div>
   </header>
 
-  <section class="search-section">
-    <h2>Search Flights</h2>
-    <form id="searchForm">
-      <input type="text" id="origin" placeholder="Origin (e.g. DEL)" required>
-      <input type="text" id="destination" placeholder="Destination (e.g. BOM)" required>
-      <input type="date" id="date" required>
-      <button type="submit">Search</button>
-    </form>
-  </section>
+  <main class="container">
+    <!-- Enhanced search section with better form layout and validation feedback -->
+    <section class="search-section">
+      <h2>🔍 Search Flights</h2>
+      <form id="searchForm">
+        <div style="display: flex; flex-wrap: wrap; gap: 15px; width: 100%;">
+          <input type="text" id="origin" placeholder="Origin (e.g. DEL)" required style="flex: 1; min-width: 150px;">
+          <input type="text" id="destination" placeholder="Destination (e.g. BOM)" required style="flex: 1; min-width: 150px;">
+          <input type="date" id="date" required style="flex: 1; min-width: 150px;">
+          <button type="submit" style="flex: 0 0 auto;">Search Flights</button>
+        </div>
+        <div id="searchError" style="margin-top: 10px;"></div>
+      </form>
+    </section>
 
-  <section id="results">
-    <h2>Available Flights</h2>
-    <table id="flightsTable">
-      <thead>
-        <tr>
-          <th>Airline</th>
-          <th>Flight No</th>
-          <th>Departure</th>
-          <th>Arrival</th>
-          <th>Price (₹)</th>
-          <th>Seats</th>
-          <th>Book</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </section>
+    <!-- Improved results section with loading state and better table styling -->
+    <section id="results" style="display: none;">
+      <h2>✈️ Available Flights</h2>
+      <div id="resultsLoading" style="display: none; text-align: center; padding: 40px;">
+        <div class="loading"></div>
+        <p style="margin-top: 10px; color: var(--text-secondary);">Searching for flights...</p>
+      </div>
+      <div id="resultsContent">
+        <table id="flightsTable">
+          <thead>
+            <tr>
+              <th>Airline</th>
+              <th>Flight No</th>
+              <th>Departure</th>
+              <th>Arrival</th>
+              <th>Price (₹)</th>
+              <th>Seats</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- Improved empty state with better messaging -->
+    <section id="emptyState" style="text-align: center; padding: 80px 20px;">
+      <p style="font-size: 18px; margin-bottom: 10px;">✈️ Ready to book your flight?</p>
+      <p style="color: var(--text-secondary); font-size: 16px;">Enter your travel details above to search for available flights</p>
+    </section>
+  </main>
 
   <script src="js/api.js"></script>
   <script src="js/search.js"></script>
